add gestion with pthread, todo debug

--- a/Makefile.Payload
+++ b/Makefile.Payload
@@ -1,5 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -g
+PFLAGS = -pthread
 
 NAME = Payload
 FILES = main.c cred_daemon.c \
@@ -18,7 +19,7 @@ OBJS = $(addprefix $(OBJS_DIR)/,$(FILES:%.c=%.o))
 all: $(NAME)
 
 $(NAME): $(OBJS_DIR) $(OBJS)
-	$(CC) $(CFLAGS) $(INCS) -o $(NAME) $(OBJS)
+	$(CC) $(CFLAGS) $(INCS) -o $(NAME) $(OBJS) $(PFLAGS)
 
 $(OBJS_DIR):
 	mkdir -p $(OBJS_DIR)
